Passe Customer Validierung von isBlank auf trim isEmpty an